# FreeRTOS-CMake

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: cmake-multi-platform.yml
application/: CMakeLists.txt
application/include/: IntQueue.h  IntQueueTimer.h  uart.h
application/src/: hooks.cpp  main.cpp  printf-stdarg.c
cmake/: arm-none-eabi.cmake
startup/: CMakeLists.txt
startup/linker/: linkerscript.ld
